# yarfoosball

./: .env-dev  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
backend/: .env-dev  .env-prod  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/docker/: app-dev.sh
backend/kickertool/: 2024_04_19_DYP_export.json  2024_05_31_DYP_export.json
backend/migrations/: env.py
backend/migrations/versions/: 16fecb58d55d_initial.py  2024_06_01_1707-29293cd2330f_add_table_league.py  2024_06_01_2052-6904bc72f053_add_tabletournament_and_competition.py  2024_06_01_2111-cf6445e35d2d_add_table_rating.py  2024_06_05_2044-52883cea49fb_initial.py  2024_06_10_1353-3be5b96ee095_first_migration.py  2024_06_12_1022-fa2cf3184a96_rename_field_json_data.py  2024_06_12_1514-9b17c769c2cd_add_external_id_field.py  2024_06_12_1619-91d2b2277ed9_external_id_long_change.py  2024_06_12_1621-6e75d05e7116_competition_order_nullable.py  2024_06_12_1711-f0a97092bb5f_add_set_external_id.py  2024_06_12_1716-5334954311a5_add_match_time_star.py  2024_06_12_1804-86b236fa8771_delete_rating_table.py  2024_06_13_1157-8adfaaa90811_add_tt_fields.py  2024_06_13_1230-21bd65162733_add_external_id_in_all_tables.py  2024_06_20_0758-f590fd088f40_add_table_league.py  2024_06_22_2142-8694e0087c9e_add_matches_statictic.py  2024_06_22_2249-e2c754582e9b_add_rating_competition_id.py  2024_06_23_0006-8051efae9c40_add_last_diff.py  2024_06_23_2200-ab98e9beee64_add_league_and_tournament_to_rating_.py  2025_01_30_2024-0a6524601961_goals_diff.py  (+6 more)
backend/src/: main.py  routes.py
(+223 files in other folders)
