[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yaroslav Dvoinyh <yaroslav.dvoinyh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
alembic-postgresql-enum = "^1.2.0"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
